ui/scss/component/_livestream.scss
$discussion-header__height: 3rem;
$recent-msg-button__height: 2rem;

.livestream {
  flex: 1;
  width: 100%;
  padding-top: var(--aspect-ratio-standard);
  position: relative;
  border-radius: var(--border-radius);

  .media__thumb,
  iframe {
    overflow: hidden;
    border-radius: var(--border-radius);
    height: 100%;
    max-height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
  }

  ~ .notice-message {
    margin-top: var(--spacing-m);
  }
}

.livestream__discussion {
  width: 100%;
  background-color: var(--color-header-background);
  border-radius: var(--border-radius);
  margin-bottom: var(--spacing-m);

  .credit-amount {
    font-weight: unset;
  }

  .button-toggle--active {
    .credit-amount {
      color: var(--color-primary-contrast);
    }
  }
  .button__label {
    svg {
      margin-bottom: unset;
    }
  }

  @media (min-width: $breakpoint-medium) {
    margin: 0;
    width: var(--livestream-comments-width);
    height: calc(100vh - var(--header-height) - var(--spacing-l));
    position: absolute;
    right: 0;
    top: 0px;
    bottom: 0;
    border-top: none;
    border-bottom: none;
    border-right: none;

    .livestream-discussion__title {
      margin-left: 0;
    }

    .card__main-actions {
      padding: 0;
    }

    .recommended-content__toggles {
      margin-right: var(--spacing-xs);

      .button-toggle--active {
        &:hover {
          p,
          span {
            color: var(--color-primary-contrast) !important;
          }
        }
      }

      .button-toggle {
        background-color: rgba(var(--color-primary-dynamic), 0.08);

        &:hover {
          background-color: rgba(var(--color-primary-dynamic), 0.1);
          p,
          span {
            color: var(--color-primary);
          }
        }
      }
    }
  }

  // Mobile
  @media (max-width: $breakpoint-small) {
    .button-toggle:last-of-type {
      margin-right: var(--spacing-xs);
    }

    .livestream-discussion__title {
      margin-left: var(--spacing-xs);
    }

    .livestream-superchats__wrapper {
      padding-left: var(--spacing-xs);
    }

    .livestream__comments-wrapper {
      .button__label {
        color: var(--color-secondary);
      }
      .button__content {
        color: var(--color-primary);
      }
    }
    @media all and (orientation: landscape) {
      // height:unset;
      height: calc(100vw - var(--header-height) - var(--spacing-l));

      .livestream__comments-wrapper {
        height: calc(100vw - var(--header-height) - 3rem - var(--spacing-l));
      }
    }
    // min-height: calc(100vh - var(--header-height) - var(--spacing-l));
  }

  .comment__author {
    color: rgba(var(--color-text-base), 0.5);
    margin-top: var(--spacing-xxs);
    max-width: unset;
    &:hover {
      color: var(--color-primary) !important;
    }
  }

  .channel-name {
    color: var(--color-secondary);
    &:hover {
      color: var(--color-primary);
    }
  }
}

.livestream-discussion__header {
  border-bottom: 1px solid var(--color-border);
  padding-bottom: var(--spacing-s);
  margin-bottom: 0;
  align-items: center;

  @media (min-width: $breakpoint-small) {
    height: $discussion-header__height;
    padding: 0 var(--spacing-s);
    padding-right: 0;
  }
}

.livestream-discussion__title {
  @extend .card__title-section;
  @extend .card__title-section--small;
  padding: 0;
}

.livestream__comments-wrapper {
  display: flex;
  flex-direction: column;
  height: calc(100vh - var(--header-height) - #{$discussion-header__height} - var(--spacing-l));
}

.livestream__comments {
  display: flex;
  flex-direction: column-reverse;
  font-size: var(--font-small);
  overflow-y: scroll;
  overflow-x: visible;
  padding-top: var(--spacing-s);
  width: 100%;
}

.livestream-comment {
  list-style-type: none;
  position: relative;

  @media (min-width: $breakpoint-small) {
    &:hover {
      background-color: rgba(var(--color-primary-dynamic), 0.1);

      .menu__button {
        opacity: 1;
      }

      .comment__author {
        color: var(--color-primary);
      }
    }

    &:not(:hover) {
      .menu__button:not(:focus):not([aria-expanded='true']) {
        opacity: 0;
      }
    }
  }

  .channel-name {
    font-size: var(--font-xsmall);
  }
}

.livestream-comment__info {
  overflow: hidden;
}

.livestream-comment--superchat {
  background-color: rgba(var(--color-primary-dynamic), 0.03);

  + .livestream-comment--superchat {
    margin-bottom: var(--spacing-xxs);
  }

  .livestream-comment__body {
    display: flex;
    align-items: flex-start;
    flex-direction: unset;
    flex: unset;
  }

  .livestream-comment__info {
    margin-top: calc(var(--spacing-xxs) / 2);
  }

  &::before {
    position: absolute;
    left: 0;
    height: 100%;
    max-height: 4rem;
    border-top-right-radius: 2px;
    border-bottom-right-radius: 2px;
    width: 5px;
    background-color: var(--color-superchat);
    content: '';
  }
}

.livestream-comment__body {
  display: flex;
  align-items: flex-start;
  margin-left: var(--spacing-s);
  overflow: hidden;

  .livestream-comment__info--sticker {
    display: flex;
    margin: var(--spacing-xxs) 0;
  }

  .channel-thumbnail {
    @include handleChannelGif(2rem);
    margin-top: var(--spacing-xxs);
    flex-shrink: 0;
  }
}

.livestream-comment__menu {
  position: absolute;
  right: var(--spacing-xs);
  top: var(--spacing-xs);
}

.livestream__comments__scroll-to-recent {
  margin-top: -$recent-msg-button__height;
  align-self: center;
  margin-bottom: var(--spacing-xs);
  font-size: var(--font-xsmall);
  padding: var(--spacing-xxs) var(--spacing-s);
  opacity: 0.9;

  &:hover {
    opacity: 1;
  }
}
/* ... */

